--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>treyjey</title>
+</head>
+<body>
+    <h1> jesus</h1> 
+    <p>jesus was son to God <strong>noted</strong><em> emphasized</em><a href="https://www.youtube.com/">welcome</a></p>
+    
+    <table>
+        <tr>
+            <td>kenya</td>
+            <td>naija</td>
+        </tr>
+    </table> 
+</body>
+</html>
+
